# zero2prod

./: Cargo.toml  configuration.yaml
.cargo/: config.toml
.github/workflows/: general.yml
docker/: init_db.sh
migrations/: 20230917140909_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
