[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jeremy Hagnere <hello@jeremyhagnere.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.20", features = ["json"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0.188", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
